# quiz-me

./: .gitignore  .pre-commit-config.yaml  README.md  packages.txt  pyproject.toml
app/: streamlit_app.py
conf/: catalog.yml  config.yml
conf/prompt_templates/anatomy_scenario/: anatomy_scenario_1.txt
conf/prompt_templates/flashcards/: flashcards_1.txt
conf/prompt_templates/microbiology_scenario/: microbiology_scenario_1.txt  microbiology_scenario_2.txt
docker/: app.dockerfile
src/pipelines/: __init__.py  general_utils.py  main.py
src/pipelines/data_pipeline/: data_pipeline.py
src/pipelines/indexing/: multi_modal_indexing.py
src/prompts/: prompt_strategy_pattern.py  utils.py
src/prompts/prompt_strategies/: __init__.py  anatomy_scenario.py
src/quiz_me/: __init__.py
src/quiz_me/modeling/: utils.py
src/quiz_me/pipelines/: __init__.py  general_utils.py  main.py
src/quiz_me/pipelines/indexing/: __init__.py  multi_modal_indexing.py  text_indexing.py
src/quiz_me/prompts/: __init__.py  prompt_strategy_pattern.py  utils.py
src/quiz_me/prompts/prompt_strategies/: anatomy_scenario.py  flashcards.py  microbiology_scenario.py
