[project]
dependencies = [
  "anthropic>=0.45.2",
  "chromadb>=0.6.3",
  "faiss-cpu>=1.10.0",
  "genanki>=0.13.1",
  "langchain-anthropic>=0.3.7",
  "langchain-community>=0.3.17",
  "langchain>=0.3.18",
  "loadenv>=0.1.1",
  "loguru>=0.7.3",
  "openai>=1.62.0",
  "pillow>=11.1.0",
  "pre-commit>=4.1.0",
  "pypdf>=5.3.0",
  "pyyaml>=6.0.2",
  "rapidocr-onnxruntime>=1.4.4",
  "tiktoken>=0.8.0",
  "transformers>=4.49.0",
  "unstructured>=0.16.20",
]
description = "Add your description here"
name = "quiz-me"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.interrogate]
exclude = ["tests", "__init__.py"]
fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-regex = []
verbose = 1
whitelist-regex = []

[tool.ruff]
target-version = "py312"

[tool.uv]
dev-dependencies = [
  "pylint>=2.16.2",
  "pytest>=7.4.0"
]
