[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
dependencies = [
  "cachetools>=5.5.2",
  "chromadb>=0.6.3",
  "debugpy>=1.8.12",
  "dotenv>=0.9.9",
  "fitz>=0.0.1.dev2",
  "huggingface-hub>=0.28.1",
  "ipython[all]>=9.0.2",
  "langchain-anthropic>=0.3.7",
  "langchain-chroma>=0.2.2",
  "langchain-community>=0.3.17",
  "langchain-core>=0.3.35",
  "langchain-experimental>=0.3.4",
  "langchain-text-splitters>=0.3.6",
  "langchain-voyageai>=0.1.4",
  "langchain>=0.3.18",
  "langgraph-prebuilt>=0.1.1",
  "langgraph>=0.3.0",
  "loadenv>=0.1.1",
  "loguru>=0.7.3",
  "lxml>=5.3.1",
  "matplotlib>=3.10.1",
  "openai>=1.62.0",
  "opencv-python-headless>=4.11.0.86",
  "pdf2image>=1.17.0",
  "pi-heif>=0.21.0",
  "pillow>=11.1.0",
  "pre-commit>=4.1.0",
  "pydantic>=2.10.6",
  "pygments>=2.19.1",
  "pymupdf>=1.25.3",
  "pypdf>=5.3.0",
  "pytesseract",
  "python-dotenv>=1.0.1",
  "pytz>=2025.1",
  "pyyaml>=6.0.2",
  "rapidocr-onnxruntime>=1.4.4",
  "rich>=13.9.4",
  "setuptools>=75.8.2",
  "streamlit>=1.43.1",
  "sympy>=1.13.1",
  "tiktoken>=0.8.0",
  "torch>=2.6.0",
  "traitlets>=5.14.3",
  "transformers>=4.49.0",
  "unstructured-client>=0.30.6",
  "unstructured-inference>=0.8.7",
  "unstructured-pytesseract>=0.3.13",
  "unstructured[all-docs]>=0.16.20",
  "uuid>=1.30"
]
description = "Add your description here"
name = "quiz_me"
readme = "README.md"
requires-python = ">=3.12.5"
version = "0.1.0"

[tool.interrogate]
exclude = ["tests", "__init__.py"]
fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-regex = []
verbose = 1
whitelist-regex = []

[tool.ruff]
target-version = "py312"

# add pip installed libraries
[tool.setuptools.packages.find]
include = ['quiz_me*']
where = ['src']

[tool.uv]
dev-dependencies = [
  "pylint>=2.16.2",
  "pytest>=7.4.0",
  "quiz-me"
]

[tool.uv.sources]
quiz-me = {workspace = true}
